--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test nunjucks template generation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,17 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "deep-clone-merge": "^1.4.0",
-    "hmpo-components": "^1.11.0",
+    "govuk-frontend": "^2.11.0",
     "lodash": "^4.17.11",
     "nunjucks": "^3.2.0"
+  },
+  "peerDependencies": {
+    "hmpo-components": "*",
+    "govuk-frontend": "*"
+  },
+  "devDependencies": {
+    "hmpo-components": "*",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4"
   }
 }
