--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test nunjucks template generation",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test && npm audit"
   },
   "repository": {
     "type": "git",
