--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HMPO/hmpo-nunjucks-test.git"
+    "url": "https://github.com/HMPO/hmpo-nunjucks-test.git"
   },
   "author": "HMPO",
   "license": "MIT",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/HMPO/hmpo-nunjucks-test#readme",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.11",
+    "cheerio": "^1.0.0-rc.12",
     "deep-clone-merge": "^1.5.4",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
@@ -27,8 +27,8 @@
     "hmpo-components": "*"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
+    "chai": "^4.5.0",
     "hmpo-components": "latest",
-    "mocha": "^10.0.0"
+    "mocha": "^10.7.0"
   }
 }
